    + Add comment in patch, also refreshed it.
    + Partially fix for lintian error shlib-with-non-pic-code, remaining fix
      needs further investigation. Overrides will be installed in the meanwhile.
    + Don't install LICENSE. The licensing information should be, and is,
      covered in debian/copyright.
    + Fix 'breaks-without-version libavcodec51' warning.
  * Register ffmpeg documentation with doc-base.
  * Install documentation with dh_installdocs.

 -- Andres Mejia <mcitadel@gmail.com>  Sat, 09 May 2009 14:07:24 -0400

ffmpeg-debian (4:0.5+svn20090420-2) unstable; urgency=low

  * debian/control: fix dependencies for libavutil-dev and libavfilter-dev
    so that they can be used with the unstripped variants properly.
  * debian/rules: set nooptflags only for relevant architectures.
  * explicitly disable 'dangerous' encoders on the --configure line.
  * fix SHLIBS_VERSION in debian/rules (Closes: #527350).

 -- Reinhard Tartler <siretart@tauware.de>  Mon, 04 May 2009 07:41:19 +0200

ffmpeg-debian (4:0.5+svn20090420-1) unstable; urgency=low

  [ Fabian Greffrath ]
  * Merge the contents of patents.txt into README.Debian and change some
    paragraphs to (hopefully) add some more clarity on the removed encoders
    and the package naming scheme. Based on suggestions by Xavier Douville
    <debian@douville.org>, thank you very much for the review. (Closes: #519025)
  * Reorder some confflags to account for GPL licensed libraries.
  * Remove patents.txt
  * Explicitely mention that no decoders are disabled in our packages.
  
  [ Loïc Minier ]
  * Disable more autodetecter ARM arch features
  * Add neon and vfp flavors to armel disabled for now
  * vfp CFLAGS: add "-mfpu=vfp -mfloat-abi=softfp"

  [ Reinhard Tartler ]
  * New Upstream Version (svn revision 18630)
  * bump epoch as 0.5 was released. Future version will use '+' to indicate 
    that the package is based on a release branch and '~' to indicate that